# neural-networks

./: .gitignore  requirements.txt
MLP/: CMakeLists.txt  main.cpp
MLP/include/: Batch.h  Conv.h  Conv2d.h  CpuBlas.h  CrossEntropyLoss.h  IBlas.h  IClassificationLossFunction.h  ILayer.h  ILossFunction.h  LinearLayer.h  Model.h  Optimizer.h  ReLU.h  SgdOptimizer.h  SgdOptimizerCreator.h  Tensor.h  Utils.h
MLP/models/: Mushroom.cpp
MLP/src/: Batch.cpp  Conv.cpp  Conv2d.cpp  CpuBlas.cpp  CrossEntropyLoss.cpp  LinearLayer.cpp  Model.cpp  Optimizer.cpp  ReLU.cpp  SgdOptimizer.cpp  SgdOptimizerCreator.cpp  Tensor.cpp
MLP/tests/: CrossEntopyTest.cpp  LinearLayerTests.cpp
Torch4ThePoorest/: .gitignore  CMakeLists.txt  main.cpp
Torch4ThePoorest/data/: lab3_model  lenet5_model  ser
Torch4ThePoorest/include/: AvgPolling.h  CachingDataLoader.h  Classification.h  ClassificationTrainer.h  Conv2d.h  CpuBlas.h  CrossEntropyLoss.h  CsvDataLoader.h  IOptimizer.h  IOptimizerCreator.h  MAELoss.h  MSELoss.h  Model.h  Sequential.h  SgdOptimizer.h  SgdOptimizerCreator.h  Tensor.h  Tqdm.h  TransformDataLoaderDecorator.h  Utils.h  WeightInitializers.h
Torch4ThePoorest/include/data/: CachingDataLoader.h  CsvDataLoader.h
Torch4ThePoorest/include/interfaces/: IActivation.h  IBlas.h  IClassificationLossFunction.h  IDataLoader.h  ILayer.h  IOptimizer.h  IOptimizerCreator.h  IRegressionLossFunction.h  ISerializable.h
Torch4ThePoorest/include/layers/: AvgPolling.h  Conv2d.h  Conv2dNaive.h  Dropout.h  Linear.h  ReLU.h  Reshaper.h  Rnn.h  RnnCell.h  Tanh.h
Torch4ThePoorest/models/: Lenet5.cpp  Mushroom.cpp
Torch4ThePoorest/models/lab3/: lab3.cpp  lab3.h  lab3_test.cpp  lab3_train.cpp
Torch4ThePoorest/models/lenet/: Lenet5.cpp  Lenet5.h  Lenet5_test.cpp  Lenet5_train.cpp
Torch4ThePoorest/src/: AvgPolling.cpp  CachingDataLoader.cpp  Classification.cpp  ClassificationTrainer.cpp  Conv2d.cpp  Conv2dNaive.cpp  CpuBlas.cpp  CrossEntropyLoss.cpp  CsvDataLoader.cpp  Dropout.cpp  ILayer.cpp  Linear.cpp  LinearLayer.cpp  MAELoss.cpp  MSELoss.cpp  Model.cpp  ReLU.cpp  Reshaper.cpp  Rnn.cpp  RnnCell.cpp  Sequential.cpp  SgdOptimizer.cpp  SgdOptimizerCreator.cpp  Tanh.cpp  Tensor.cpp  Tqdm.cpp  TransformDataLoaderDecorator.cpp  Utils.cpp  WeightInitializers.cpp
Torch4ThePoorest/tests/: Conv2dTest.cpp  CrossEntopyTest.cpp  LinearLayerTests.cpp
data/: data_mass.ods  data_mass_prep.xlsx
models/: LinearLayer.py
notebooks/: accuracy-100-f1-score-99-9-xgboost-mlp.ipynb  graph.ipynb  lab1.ipynb  lab2_torch.ipynb  lab3-rnn-test.ipynb  lab3.ipynb
notebooks/results-kabby-lake/: result-0  result-1  result-10  result-2  result-3  result-4  result-5  result-6  result-7  result-8  result-9
notebooks/results-nehalem/: result-0  result-1  result-10  result-2  result-3  result-4  result-5  result-6  result-7  result-8  result-9
utils/: gain.py  lab1.py
